--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,8 @@
 check:
-	./0001-basic.sh
+	./0000-basic.sh
+	./1000-block.sh
+	./2000-junk.sh
+	./3000-headers.sh
+	./9000-legacy.sh
 
 .PHONY: check
