--- a/test/Makefile
+++ b/test/Makefile
@@ -3,7 +3,7 @@ check:
 	@./1000-block.sh 2>/dev/null
 	@./2000-junk.sh 2>/dev/null
 	@./3000-headers.sh 2>/dev/null
-	@./4000-whitelist.sh 2>/dev/null
+	@./4000-allowlist.sh 2>/dev/null
 	@./9000-legacy.sh 2>/dev/null
 
 .PHONY: check
